<resources>
    <string name="app_name">MoneySAVER</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="get_information">please enter all your information  </string>
    <string name="password_constraints">password must contain letters , digits and at least 8 characters </string>
    <string name="id">id</string>
    <string name="settings">settings</string>
    <string name="expenses_details">expenses details</string>
    <string name="title">title</string>
    <string name="price">price in  DT</string>
    <string name="password_msg_error">        password must contain letters , digits and at least 8 characters</string>
    <string name="password_mismatch_error">        Password and confirm password does not match</string>
    <string name="salary_msg_error">salary limit cannot be higher than salary</string>
    <string name="expenses_added">expense added successfully</string>
    <string name="fields_constraints">fields cannot be empty</string>
    <string name="delete_request">Do you want to delete this item ?</string>
    <string name="expenses">expenses</string>
    <string name="daily">Daily</string>
    <string name="monthly">Monthly</string>
    <string name="expensesMonthOrVarious">*this expense will be multiplied by 1 </string>
    <string name="expensesDay">*this expense will be multiplied by 30 </string>
    <string name="expensesWeek">*this expense will be multiplied by 4 </string>

    <string name="weekly">Weekly</string>
    <string name="various_pascal_case">Various</string>
    <string-array name="filter_option">
        <item> category </item>
        <item>  price  </item>
    </string-array>

    <string name="sign_in">SIGN IN</string>
    <string name="category">SIGN IN</string>
    <string name="create_an_account">create an account</string>
    <string name="salary">Salary</string>
    <string name="limit_salary">limit salary</string>
    <string name="expnses_limit">Expnses Limit</string>
    <string name="authentification_not_valid">authentication_not_valid </string>
    <string name="sign_out_question">do you want to sign out </string>
    <string name="account_created_successfully">account created successfully </string>
    <string name="account_updated_successfully">account updated successfully </string>
    <string name="Android_Alert">Android Alert </string>
    <string name="sign_up">SIGN UP</string>
    <string name="budget_image">budget image</string>
    <string name="money">MONEY</string>
    <string name="saver">SAVER</string>
    <string name="edit">Edit</string>
    <string name="confirm_password">confirm password</string>
    <string name="week">week</string>
    <string name="month">month</string>
    <string name="day">day</string>
    <string name="various">various</string>
</resources>