<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:paddingHorizontal="32dp"
    android:background="#9AEAE9"
    android:layout_height="match_parent"
    tools:context=".ui.clientlist.SignUpActivity">


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etUsername"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/edit_text_theme"
        android:ems="10"
        android:hint="@string/username"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:paddingTop="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.082" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etPAssword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:inputType="textPassword"
        android:layout_height="50dp"
        android:layout_marginTop="48dp"

        android:background="@drawable/edit_text_theme"
        android:hint="@string/password"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUsername" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etSalary"
        android:layout_width="match_parent"
        android:layout_height="50dp"

        android:layout_marginTop="48dp"
        android:background="@drawable/edit_text_theme"
        android:hint="@string/salary"
        android:inputType="numberDecimal"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etConfirmPassword" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etExpenseLimit"
        android:layout_width="match_parent"
        android:layout_height="50dp"

        android:layout_marginTop="52dp"
        android:background="@drawable/edit_text_theme"
        android:hint="@string/expnses_limit"

        android:inputType="numberDecimal"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        app:layout_constraintTop_toBottomOf="@+id/etSalary"
        tools:layout_editor_absoluteX="32dp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etConfirmPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="52dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:background="@drawable/edit_text_theme"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPAssword" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btSignUp"
        android:layout_width="142dp"
        android:layout_height="66dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/button_text_theme"
        android:text="@string/sign_up"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etExpenseLimit" />


</androidx.constraintlayout.widget.ConstraintLayout>