<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.mainfragment.MainFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/RemainingMoney"
        android:layout_width="239dp"
        android:gravity="center"
        android:textSize="30sp"
        android:layout_height="71dp"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:columnCount="2"

        android:padding="30dp"
        android:rowCount="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RemainingMoney"
        app:layout_constraintVertical_bias="0.192"
        tools:layout_editor_absoluteX="9dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/expensesPerMonth"
            android:layout_width="112dp"
            android:layout_height="119dp"
            app:cardBackgroundColor="@color/appColor">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/month"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    android:text="@string/expensesMonthOrVarious"
                    android:textSize="11sp"/>


            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/expensesPerWeek"
            android:layout_width="112dp"
            android:layout_height="119dp"
            android:layout_marginStart="40dp"
            app:cardBackgroundColor="@color/appColor">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/week"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    android:text="@string/expensesWeek"
                    android:textSize="11sp"/>



            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/expensesPerDay"
            android:layout_width="112dp"
            android:layout_height="119dp"
            android:layout_marginTop="40dp"
            app:cardBackgroundColor="@color/appColor">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/day"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    android:text="@string/expensesDay"
                    android:textSize="11sp"/>


            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/variousExpenses"
            android:layout_width="112dp"
            android:layout_height="119dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="40dp"

            app:cardBackgroundColor="@color/appColor">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/various"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    android:text="@string/expensesMonthOrVarious"
                    android:textSize="11sp"/>


            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </GridLayout>


</androidx.constraintlayout.widget.ConstraintLayout>