<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ProfileFragment.ProfileFragment">
    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/textView"
        android:layout_width="165dp"
        android:layout_height="30dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="36dp"
        android:gravity="start"
        android:text="@string/username"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etUersname"
        android:layout_width="319dp"
        android:layout_height="49dp"
        android:layout_marginTop="8dp"

        android:background="@drawable/edit_text_theme"
        android:gravity=""
        android:hint="@string/username"
        android:paddingStart="5dp"
        android:paddingTop="8dp"
        android:paddingEnd="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="165dp"
        android:layout_height="38dp"

        android:gravity="start"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="32dp"
        android:textStyle="bold"
        android:text="@string/salary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUersname" />

    <androidx.appcompat.widget.AppCompatEditText

        android:id="@+id/etSalary1"
        android:layout_width="321dp"
        android:layout_height="49dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_text_theme"
        android:gravity=""
        android:hint="@string/salary"
        android:paddingStart="5dp"
        android:paddingTop="8dp"
        android:inputType="numberDecimal"
        android:paddingEnd="5dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.455"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="259dp"
        android:layout_height="39dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="24dp"
        android:textColor="@color/black"
        android:gravity="start"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:text="@string/limit_salary"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSalary1" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etLimitSalary"
        android:layout_width="330dp"

        android:layout_height="49dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_text_theme"
        android:paddingStart="5dp"
        android:paddingTop="5dp"
        android:paddingEnd="5dp"
        android:hint="@string/limit_salary"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/updateButton"
        android:layout_width="143dp"
        android:layout_height="56dp"
        android:layout_marginTop="52dp"
        android:background="@drawable/button_text_theme"
        android:text="@string/edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.455"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etLimitSalary" />

</androidx.constraintlayout.widget.ConstraintLayout>